# actix-graphql-react

./: .env  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
backend/: .env  .gitignore  Cargo.toml  README.md
backend/api/: schema.graphql
backend/examples/: env.rs  uuid.rs
backend/migrations/2019-08-17-063456_create_posts/: down.sql  up.sql
backend/migrations/2019-08-17-063456_create_tables/: down.sql  up.sql
backend/src/: data.rs  db.rs  gql.rs  gql_types.rs  graphql.bak  graphql.rs  jwt.rs  lib.rs  main.bak  main.rs  models.rs  schema.graphql  schema.rs
backend/src/data/: mod.rs  project.rs  user.rs  utils.rs
backend/src/gql/: context.rs  mod.rs
backend/src/gql/mutations/: mod.rs  project_mut.rs  user_mut.rs
backend/src/gql/queries/: mod.rs  project_qry.rs  user_qry.rs
backend/src/graphql/: mod.rs  mutation.rs  query.rs
backend/src/graphql/mutation/: mod.rs  project_mut.rs  user_mut.rs
backend/src/graphql/mutations/: mod.rs  project_mut.rs  user_mut.rs
backend/src/graphql/query/: mod.rs  project_qry.rs  user_qry.rs
backend/src/models/: mod.rs  project.rs  user.rs
examples/: delete_post.rs  publish_post.rs  show_posts.rs  uuid.rs  write_post.rs
frontend/: .babelrc  .env  README.md  apollo.config.js  package-lock.json  package.json  relay.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  environment.js  index.tsx  schema.graphql
frontend/src/__generated__/: AppQuery.graphql.js
src/: lib.rs  main.rs  models.rs  schema.rs
