[package]
name = "actix-web-juniper-react-apollo"
version = "0.0.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
actix-web = "^1.0.7"
env_logger = "^0.6.2"
futures = "^0.1.28"
serde = { version = "^1.0.99", features = ["derive"] }
serde_json = "^1.0.40"
juniper = "^0.13.1"
diesel = { version = "^1.4.2", features = ["postgres", "r2d2"] }
dotenv = "^0.14.1"
uuid = { version = "^0.7.4", features = ["serde", "v4"] }
jsonwebtoken = "^6.0.1"
