[package]
name = "actix-graphql-react-apollo"
version = "0.0.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
actix-web = "^1.0.9"
actix-cors = "^0.1.0"
pretty_env_logger = "^0.3.1"
futures = "^0.3.1"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.44"
juniper = "^0.14.1"
diesel = { version = "^1.4.3", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "^0.8.7"
chrono = "^0.4.10"
dotenv = "^0.15.0"
uuid = { version = "^0.8.1", features = ["serde", "v4"] }
jsonwebtoken = "^6.0.1"
bcrypt = "^0.6.1"
