[package]
name = "agract-backend"
version = "0.0.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
actix-rt = "=1.0.0"
actix-web = "=2.0.0"
actix-cors = "=0.2.0"

dotenv = "=0.15.0"
env_logger = "=0.7.1"
uuid = { version = "=0.8.1", features = ["serde", "v4"] }
serde_json = "=1.0.48"

juniper = "=0.14.2"
diesel = { version = "=1.4.3", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "=0.8.8"
chrono = "=0.4.11"
jsonwebtoken = "=7.1.0"
